renaming hmm to hidden_markov_model

--- a/docs/notebooks/hmm/autoregressive_hmm.ipynb
+++ b/docs/notebooks/hmm/autoregressive_hmm.ipynb
@@ -52,7 +52,7 @@
     "import jax.random as jr\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from dynamax.hmm.models.autoregressive_hmm import LinearAutoregressiveHMM\n",
+    "from dynamax.hidden_markov_model.models.autoregressive_hmm import LinearAutoregressiveHMM\n",
     "from dynamax.utils.plotting import gradient_cmap\n",
     "from dynamax.utils.utils import random_rotation\n",
     "from tensorflow_probability.substrates import jax as tfp"
