--- a/docs/notebooks/hmm/gaussian_hmm.ipynb
+++ b/docs/notebooks/hmm/gaussian_hmm.ipynb
@@ -58,7 +58,7 @@
     "from jax import vmap\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from dynamax.hmm.models import GaussianHMM"
+    "from dynamax.hidden_markov_model.models import GaussianHMM"
    ]
   },
   {
