--- a/dynamax/hidden_markov_model/demos/bernoulli_hmm_example.ipynb
+++ b/dynamax/hidden_markov_model/demos/bernoulli_hmm_example.ipynb
@@ -82,7 +82,7 @@
     "import seaborn as sns\n",
     "import tensorflow_probability.substrates.jax.distributions as tfd\n",
     "\n",
-    "from dynamax.hmm.models import BernoulliHMM\n",
+    "from dynamax.hidden_markov_model.models import BernoulliHMM\n",
     "from dynamax.plotting import gradient_cmap"
    ]
   },
