--- a/dynamax/hidden_markov_model/demos/fixed_lag_smoother_hmm.ipynb
+++ b/dynamax/hidden_markov_model/demos/fixed_lag_smoother_hmm.ipynb
@@ -39,8 +39,8 @@
    },
    "outputs": [],
    "source": [
-    "import dynamax.hmm.inference as core\n",
-    "import dynamax.hmm.inference_test as test\n",
+    "import dynamax.hidden_markov_model.inference as core\n",
+    "import dynamax.hidden_markov_model.inference_test as test\n",
     "\n",
     "import jax.numpy as jnp\n",
     "import jax.random as jr\n",
