--- a/dynamax/hidden_markov_model/demos/multinomial_hmm.ipynb
+++ b/dynamax/hidden_markov_model/demos/multinomial_hmm.ipynb
@@ -54,7 +54,7 @@
     "from jax import vmap\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from dynamax.hmm.models.multinomial_hmm import MultinomialHMM"
+    "from dynamax.hidden_markov_model.models.multinomial_hmm import MultinomialHMM"
    ]
   },
   {
