--- a/dynamax/hidden_markov_model/demos/poisson_hmm_changepoint.ipynb
+++ b/dynamax/hidden_markov_model/demos/poisson_hmm_changepoint.ipynb
@@ -60,7 +60,7 @@
                 "from functools import partial\n",
                 "from matplotlib import pylab as plt\n",
                 "\n",
-                "from dynamax.hmm.models import PoissonHMM, StandardHMM\n",
+                "from dynamax.hidden_markov_model.models import PoissonHMM, StandardHMM\n",
                 "from dynamax.parameters import ParameterProperties"
             ]
         },
