--- a/dynamax/hidden_markov_model/demos/poisson_hmm_neurons.ipynb
+++ b/dynamax/hidden_markov_model/demos/poisson_hmm_neurons.ipynb
@@ -59,7 +59,7 @@
     "import tensorflow_probability.substrates.jax.bijectors as tfb\n",
     "import tensorflow_probability.substrates.jax.distributions as tfd\n",
     "\n",
-    "from dynamax.hmm.models import PoissonHMM"
+    "from dynamax.hidden_markov_model.models import PoissonHMM"
    ]
   },
   {
