--- a/dynamax/hidden_markov_model/demos/switching_linear_regression.ipynb
+++ b/dynamax/hidden_markov_model/demos/switching_linear_regression.ipynb
@@ -42,7 +42,7 @@
     "import seaborn as sns\n",
     "sns.set_context(\"notebook\")\n",
     "\n",
-    "from dynamax.hmm.models import LinearRegressionHMM"
+    "from dynamax.hidden_markov_model.models import LinearRegressionHMM"
    ]
   },
   {
