--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -66,7 +66,7 @@
     "import optax\n",
     "from graphviz import Digraph\n",
     "import matplotlib.pyplot as plt\n",
-    "from dynamax.hmm.models import CategoricalHMM"
+    "from dynamax.hidden_markov_model.models import CategoricalHMM"
    ]
   },
   {
