--- a/dynamax/hidden_markov_model/demos/low_rank_gaussian_hmm.ipynb
+++ b/dynamax/hidden_markov_model/demos/low_rank_gaussian_hmm.ipynb
@@ -64,7 +64,7 @@
     "import jax.random as jr\n",
     "from itertools import count\n",
     "\n",
-    "from dynamax.hmm.models import LowRankGaussianHMM"
+    "from dynamax.hidden_markov_model.models import LowRankGaussianHMM"
    ]
   },
   {
