--- a/dynamax/hidden_markov_model/demos/parallel_message_passing.ipynb
+++ b/dynamax/hidden_markov_model/demos/parallel_message_passing.ipynb
@@ -74,9 +74,9 @@
         "import jax.random as jr\n",
         "from jax import lax, jit, grad, vmap, value_and_grad\n",
         "import matplotlib.pyplot as plt\n",
-        "from dynamax.hmm.inference import HMMPosterior, hmm_filter, hmm_smoother\n",
-        "from dynamax.hmm.parallel_inference import hmm_filter as parallel_hmm_filter\n",
-        "from dynamax.hmm.parallel_inference import hmm_smoother as parallel_hmm_smoother"
+        "from dynamax.hidden_markov_model.inference import HMMPosterior, hmm_filter, hmm_smoother\n",
+        "from dynamax.hidden_markov_model.parallel_inference import hmm_filter as parallel_hmm_filter\n",
+        "from dynamax.hidden_markov_model.parallel_inference import hmm_smoother as parallel_hmm_smoother"
       ]
     },
     {
