renaming files and folder. updating notebooks accordingly

--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
@@ -76,10 +76,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "from dynamax.generalized_gaussian_ssm.generalized_gaussian_ssm import *\n",
-        "from dynamax.generalized_gaussian_ssm.conditional_moments_gaussian_filter import *\n",
-        "\n"
+        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
+        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_filter"
       ]
     },
     {
