--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,18 +38,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "from dynamax.generalized_gaussian_ssm.generalized_gaussian_ssm import *\n",
-        "from dynamax.generalized_gaussian_ssm.conditional_moments_gaussian_filter import *"
+        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM, GeneralizedGaussianSSM\n",
+        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_smoother"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "FQZNel8lCMgu"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "dziKgyuB_Ogf",
         "tags": [
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "ocymRwXWI_FC"
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "GpljoNjSHfnk"
       },
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "6O1hF4idYr_3"
       },
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "AoE8qo7PEuXx"
       },
@@ -349,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "48v2vdnkTbp2"
       },
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "id": "DPvH9E24eDLb"
       },
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
