--- a/docs/notebooks/hmm/gaussian_hmm.ipynb
+++ b/docs/notebooks/hmm/gaussian_hmm.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Helper functions for plotting\n",
-    "from dynamax.plotting import CMAP, COLORS, white_to_color_cmap\n",
+    "from dynamax.utils.plotting import CMAP, COLORS, white_to_color_cmap\n",
     "\n",
     "def plot_gaussian_hmm(hmm, params, emissions, states,  title=\"Emission Distributions\", alpha=0.25):\n",
     "    lim = 0.85 * abs(emissions).max()\n",
