--- a/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
@@ -51,30 +51,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_filter, lgssm_smoother\n",
-    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_filter as parallel_lgssm_filter\n",
-    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_smoother as parallel_lgssm_smoother\n",
-    "from dynamax.linear_gaussian_ssm.inference import ParamsLGSSM\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "dc7de09a-aa24-4702-816f-4e1b21fcdaa3",
-   "metadata": {
-    "id": "dc7de09a-aa24-4702-816f-4e1b21fcdaa3"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
     "import jax\n",
     "from jax import numpy as jnp\n",
-    "from jax import scipy as jsc\n",
     "from jax import random as jr\n",
-    "from jax import vmap, tree_map, config, block_until_ready\n",
-    "from jax.lax import associative_scan\n",
-    "from matplotlib import pyplot as plt"
+    "from jax import block_until_ready\n",
+    "from matplotlib import pyplot as plt\n",
+    "import time\n",
+    "\n",
+    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother\n",
+    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_smoother as parallel_lgssm_smoother\n",
+    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM"
    ]
   },
   {
@@ -288,18 +274,6 @@
    },
    "source": [
     "## Timing comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "mHz92DIeJlGT",
-   "metadata": {
-    "id": "mHz92DIeJlGT"
-   },
-   "outputs": [],
-   "source": [
-    "import time"
    ]
   },
   {
