--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,19 +71,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "Pm4bQFPKDpjv"
       },
       "outputs": [],
       "source": [
-        "from dynamax.generalized_gaussian_ssm.generalized_gaussian_ssm import *\n",
-        "from dynamax.generalized_gaussian_ssm.conditional_moments_gaussian_filter import *"
+        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
+        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals, UKFIntegrals, GHKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_filter"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "dJ-SA4ecDpvF"
       },
@@ -118,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "XqtQ2Q8fD0N9"
       },
@@ -156,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "0ZrATPKNSbh_"
       },
@@ -207,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "XyCb3_qSyd0Q"
       },
@@ -230,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -272,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "id": "1-i3HLK6Ujes"
       },
@@ -300,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "nxgbUNqPWa5I"
       },
@@ -327,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "id": "fOsV-GxXkblr"
       },
@@ -387,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "id": "DKsWG_RmPLip"
       },
@@ -419,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "metadata": {
         "id": "fZ_LZPH7NCvx"
       },
@@ -432,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -463,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -507,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {
         "id": "mDqje5wOYlHa"
       },
@@ -527,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "metadata": {
         "id": "FW1_ZUFQYfOx"
       },
@@ -561,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -650,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -739,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
