--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
@@ -97,11 +97,11 @@
     "from jax import random as jr\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from dynamax.plotting import  plot_uncertainty_ellipses\n",
-    "from dynamax.nonlinear_gaussian_ssm.nonlinear_gaussian_ssm import ParamsNLGSSM, NonlinearGaussianSSM\n",
-    "from dynamax.nonlinear_gaussian_ssm.extended_kalman_filter import extended_kalman_filter as ekf\n",
-    "from dynamax.nonlinear_gaussian_ssm.unscented_kalman_filter import unscented_kalman_filter as ukf\n",
-    "from dynamax.nonlinear_gaussian_ssm.unscented_kalman_filter import UKFHyperParams\n"
+    "from dynamax.utils.plotting import  plot_uncertainty_ellipses\n",
+    "from dynamax.nonlinear_gaussian_ssm.models import ParamsNLGSSM, NonlinearGaussianSSM\n",
+    "from dynamax.nonlinear_gaussian_ssm.inference_ekf import extended_kalman_filter as ekf\n",
+    "from dynamax.nonlinear_gaussian_ssm.inference_ukf import unscented_kalman_filter as ukf\n",
+    "from dynamax.nonlinear_gaussian_ssm.inference_ukf import UKFHyperParams\n"
    ]
   },
   {
