updating notebooks to use simpler imports

--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
@@ -76,9 +76,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
-        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals\n",
-        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_filter"
+        "from dynamax.generalized_gaussian_ssm import ParamsGGSSM, EKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm import conditional_moments_gaussian_filter"
       ]
     },
     {
