--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
@@ -42,9 +42,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM, GeneralizedGaussianSSM\n",
-        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals\n",
-        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_smoother"
+        "from dynamax.generalized_gaussian_ssm import ParamsGGSSM, GeneralizedGaussianSSM, EKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm import conditional_moments_gaussian_smoother"
       ]
     },
     {
