--- a/docs/notebooks/hmm/casino_hmm_inference.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_inference.ipynb
@@ -54,7 +54,7 @@
     "from jax import vmap\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from dynamax.hidden_markov_model.models import CategoricalHMM"
+    "from dynamax.hidden_markov_model import CategoricalHMM"
    ]
   },
   {
