--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_mlp.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_mlp.ipynb
@@ -75,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dynamax.nonlinear_gaussian_ssm.models import ParamsNLGSSM\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ekf import extended_kalman_filter"
+    "from dynamax.nonlinear_gaussian_ssm import ParamsNLGSSM, extended_kalman_filter"
    ]
   },
   {
