--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
@@ -98,10 +98,9 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from dynamax.utils.plotting import  plot_uncertainty_ellipses\n",
-    "from dynamax.nonlinear_gaussian_ssm.models import ParamsNLGSSM, NonlinearGaussianSSM\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ekf import extended_kalman_filter as ekf\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ukf import unscented_kalman_filter as ukf\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ukf import UKFHyperParams\n"
+    "from dynamax.nonlinear_gaussian_ssm import ParamsNLGSSM, NonlinearGaussianSSM, UKFHyperParams\n",
+    "from dynamax.nonlinear_gaussian_ssm import extended_kalman_filter as ekf\n",
+    "from dynamax.nonlinear_gaussian_ssm import unscented_kalman_filter as ukf\n"
    ]
   },
   {
