--- a/dynamax/hidden_markov_model/demos/bach_chorales_hmm.ipynb
+++ b/dynamax/hidden_markov_model/demos/bach_chorales_hmm.ipynb
@@ -63,7 +63,7 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
-    "from dynamax.hidden_markov_model.models import BernoulliHMM"
+    "from dynamax.hidden_markov_model import BernoulliHMM"
    ]
   },
   {
