--- a/dynamax/hidden_markov_model/demos/multinomial_hmm.ipynb
+++ b/dynamax/hidden_markov_model/demos/multinomial_hmm.ipynb
@@ -51,10 +51,9 @@
    "source": [
     "import jax.numpy as jnp\n",
     "import jax.random as jr\n",
-    "from jax import vmap\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from dynamax.hidden_markov_model.models.multinomial_hmm import MultinomialHMM"
+    "from dynamax.hidden_markov_model import MultinomialHMM"
    ]
   },
   {
