--- a/dynamax/hidden_markov_model/demos/poisson_hmm_changepoint.ipynb
+++ b/dynamax/hidden_markov_model/demos/poisson_hmm_changepoint.ipynb
@@ -8,20 +8,9 @@
             "source": [
                 "# HMM with Poisson observations for detecting changepoints in the rate of a signal\n",
                 "\n",
-                "Based on https://www.tensorflow.org/probability/examples/Multiple_changepoint_detection_and_Bayesian_model_selection\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 1,
-            "metadata": {
-                "id": "n6VSJM1gzlM0"
-            },
-            "outputs": [],
-            "source": [
-                "# import logging\n",
+                "**WARNING: This notebook needs to be updated per the latest dynamax refactor!**\n",
                 "\n",
-                "# logging.getLogger(\"absl\").setLevel(logging.CRITICAL)"
+                "Based on https://www.tensorflow.org/probability/examples/Multiple_changepoint_detection_and_Bayesian_model_selection\n"
             ]
         },
         {
@@ -60,7 +49,7 @@
                 "from functools import partial\n",
                 "from matplotlib import pylab as plt\n",
                 "\n",
-                "from dynamax.hidden_markov_model.models import PoissonHMM, StandardHMM\n",
+                "from dynamax.hidden_markov_model import PoissonHMM, HMM\n",
                 "from dynamax.parameters import ParameterProperties"
             ]
         },
@@ -160,7 +149,7 @@
                 "                 transition_matrix_concentration=1.1,\n",
                 "                 emission_prior_loc=0.0,\n",
                 "                 emission_prior_scale=1.0):\n",
-                "        StandardHMM.__init__(self,\n",
+                "        HMM.__init__(self,\n",
                 "            num_states, \n",
                 "            initial_probs_concentration=initial_probs_concentration,\n",
                 "            transition_matrix_concentration=transition_matrix_concentration)\n",
@@ -170,7 +159,7 @@
                 "        \n",
                 "    def initialize(self, key, method=\"prior\", initial_probs=None, transition_matrix=None, rates=None):\n",
                 "        key1, key2 = jr.split(key)\n",
-                "        params, props = StandardHMM.initialize(self, key=key1, \n",
+                "        params, props = HMM.initialize(self, key=key1, \n",
                 "                                               method=method, \n",
                 "                                               initial_probs=initial_probs, \n",
                 "                                               transition_matrix=transition_matrix)\n",
