--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,20 +71,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "Pm4bQFPKDpjv"
       },
       "outputs": [],
       "source": [
-        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
-        "from dynamax.generalized_gaussian_ssm.inference import EKFIntegrals, UKFIntegrals, GHKFIntegrals\n",
-        "from dynamax.generalized_gaussian_ssm.inference import conditional_moments_gaussian_filter"
+        "from dynamax.generalized_gaussian_ssm import ParamsGGSSM, EKFIntegrals, UKFIntegrals, GHKFIntegrals\n",
+        "from dynamax.generalized_gaussian_ssm import conditional_moments_gaussian_filter"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "dJ-SA4ecDpvF"
       },
@@ -119,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "XqtQ2Q8fD0N9"
       },
@@ -157,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "0ZrATPKNSbh_"
       },
@@ -208,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "XyCb3_qSyd0Q"
       },
@@ -231,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -273,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "1-i3HLK6Ujes"
       },
@@ -301,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "nxgbUNqPWa5I"
       },
@@ -328,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "fOsV-GxXkblr"
       },
@@ -388,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "DKsWG_RmPLip"
       },
@@ -420,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "id": "fZ_LZPH7NCvx"
       },
@@ -433,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -464,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -508,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "metadata": {
         "id": "mDqje5wOYlHa"
       },
@@ -528,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "id": "FW1_ZUFQYfOx"
       },
@@ -562,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -651,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -740,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
