--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
@@ -136,9 +136,8 @@
     "from jaxtyping import Float, Array\n",
     "from typing import Callable, NamedTuple\n",
     "\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ekf import extended_kalman_smoother\n",
-    "from dynamax.nonlinear_gaussian_ssm.inference_ukf import unscented_kalman_smoother, UKFHyperParams\n",
-    "from dynamax.nonlinear_gaussian_ssm.models import ParamsNLGSSM"
+    "from dynamax.nonlinear_gaussian_ssm import ParamsNLGSSM, UKFHyperParams\n",
+    "from dynamax.nonlinear_gaussian_ssm import extended_kalman_smoother, unscented_kalman_smoother"
    ]
   },
   {
