refactoring lgssm module

--- a/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "from jax import numpy as jnp\n",
     "from matplotlib import pyplot as plt\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM"
+    "from dynamax.linear_gaussian_ssm import LinearGaussianSSM"
    ]
   },
   {
