--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -120,8 +120,8 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from dynamax.utils.plotting import plot_uncertainty_ellipses\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM\n",
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother, lgssm_filter\n"
+    "from dynamax.linear_gaussian_ssm import LinearGaussianSSM\n",
+    "from dynamax.linear_gaussian_ssm import lgssm_smoother, lgssm_filter\n"
    ]
   },
   {
