--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -59,7 +59,7 @@
                 "from jax import jit, vmap\n",
                 "from itertools import count\n",
                 "\n",
-                "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM\n",
+                "from dynamax.linear_gaussian_ssm import LinearGaussianSSM\n",
                 "from dynamax.parameters import log_det_jac_constrain\n",
                 "\n",
                 "import matplotlib.pyplot as plt\n",
