--- a/dynamax/linear_gaussian_ssm/demos/lgssm_blocked_gibbs.ipynb
+++ b/dynamax/linear_gaussian_ssm/demos/lgssm_blocked_gibbs.ipynb
@@ -11,8 +11,8 @@
     "from jax import jit, vmap\n",
     "from itertools import count\n",
     "\n",
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm_conjugate import LinearGaussianConjugateSSM\n",
+    "from dynamax.linear_gaussian_ssm import lgssm_smoother\n",
+    "from dynamax.linear_gaussian_ssm import LinearGaussianConjugateSSM\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
