--- a/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
@@ -54,7 +54,7 @@
     "import jax.random as jr\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm_conjugate import LinearGaussianConjugateSSM\n",
+    "from dynamax.linear_gaussian_ssm import LinearGaussianConjugateSSM\n",
     "from dynamax.utils.utils import monotonically_increasing"
    ]
   },
