--- a/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
@@ -58,9 +58,8 @@
     "from matplotlib import pyplot as plt\n",
     "import time\n",
     "\n",
-    "from dynamax.linear_gaussian_ssm.inference import lgssm_smoother\n",
-    "from dynamax.linear_gaussian_ssm.parallel_inference import  lgssm_smoother as parallel_lgssm_smoother\n",
-    "from dynamax.linear_gaussian_ssm.linear_gaussian_ssm import LinearGaussianSSM"
+    "from dynamax.linear_gaussian_ssm import lgssm_smoother, parallel_lgssm_smoother\n",
+    "from dynamax.linear_gaussian_ssm import LinearGaussianSSM"
    ]
   },
   {
