updating install links and adding text to the casino inference notebook

--- a/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
@@ -40,7 +40,7 @@
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
     "    print('installing dynamax')\n",
-    "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
+    "    %pip install -q dynamax[notebooks]\n",
     "    import dynamax"
    ]
   },
