--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
@@ -76,13 +76,11 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
     "    print('installing dynamax')\n",
-    "    %pip install -qq git+https://github.com/probml/dynamax.git\n",
+    "    %pip install -q dynamax[notebooks]\n",
     "    import dynamax"
    ]
   },
