--- a/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_linreg.ipynb
@@ -47,7 +47,8 @@
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
     "    print('installing dynamax')\n",
-    "    %pip install -qq git+https://github.com/probml/dynamax.git"
+    "    %pip install dynamax[notebooks]\n",
+    "    import dynamax"
    ]
   },
   {
@@ -232,7 +233,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.6 ('dynamax')",
    "language": "python",
    "name": "python3"
   },
@@ -246,11 +247,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
    }
   }
  },
