updating the casino learning notebook

--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -512,7 +512,7 @@
     "Finally, let's compare the learning curve of EM to those of SGD. For comparison, we plot the loss associated with the true parameters that generated the data.\n",
     "\n",
     "```{important}\n",
-    "To compare the log probabilities returned by `fit_em` to the losses returned by `fit_SGD`, you need to negate the log probabilities and divide by the total number of emissions. This is because optimization library defaults typically assume the loss is scaled to be $\\mathcal{O}(1)$.\n",
+    "To compare the log probabilities returned by `fit_em` to the losses returned by `fit_sgd`, you need to negate the log probabilities and divide by the total number of emissions. This is because optimization library defaults typically assume the loss is scaled to be $\\mathcal{O}(1)$.\n",
     "```"
    ]
   },
