updating the casino learning notebook

--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -6,7 +6,7 @@
     "id": "vztgLkUUYzdW"
    },
    "source": [
-    "# Casino HMM: learning (parameter estimation)\n",
+    "# Casino HMM: Learning (parameter estimation)\n",
     "\n",
     "This notebook continues the \"occasionally dishonest casino\" example from the preceding notebook.\n",
     "There, we assumed we knew the parameters of the model: the probability of switching between fair and loaded dice and the probabilities of the different outcomes (1,...,6) for each die. \n",
