updating the Gaussian HMM notebook

--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -59,6 +59,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
