capturing output from installation

--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_poisson_demo.ipynb
@@ -28,6 +28,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%capture\n",
         "try:\n",
         "    import dynamax\n",
         "except ModuleNotFoundError:\n",
