--- a/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_parallel_inference.ipynb
@@ -36,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
