--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_logistic_regression_demo.ipynb
@@ -61,6 +61,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%capture\n",
         "try:\n",
         "    import dynamax\n",
         "except ModuleNotFoundError:\n",
