--- a/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
+++ b/docs/notebooks/generalized_gaussian_ssm/cmgf_mlp_classification_demo.ipynb
@@ -62,6 +62,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%capture\n",
         "try:\n",
         "    import dynamax\n",
         "except ModuleNotFoundError:\n",
