--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -98,6 +98,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
