--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -26,6 +26,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "%%capture\n",
                 "try:\n",
                 "    import dynamax\n",
                 "except ModuleNotFoundError:\n",
