--- a/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
@@ -28,6 +28,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
