--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_pendulum.ipynb
@@ -111,6 +111,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
