--- a/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
+++ b/docs/notebooks/nonlinear_gaussian_ssm/ekf_ukf_spiral.ipynb
@@ -76,6 +76,7 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "try:\n",
     "    import dynamax\n",
     "except ModuleNotFoundError:\n",
