fix latex doc string

--- a/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/kf_tracking.ipynb
@@ -13,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "17072519",
    "metadata": {},
@@ -64,7 +65,7 @@
     "0 & 0 & 1 & 0\n",
     "    \\end{pmatrix}\n",
     "    }_{H}\n",
-    "    \n",
+    "    \\;\n",
     "\\underbrace{\\begin{pmatrix} u_t\\\\ \\dot{u}_t \\\\ v_t \\\\ \\dot{v}_t \\end{pmatrix}}_{z_t}    \n",
     " + r_t\n",
     "\\end{align*}\n",
@@ -586,7 +587,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('dynamax')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -600,11 +601,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
