--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -560,29 +560,29 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not only does EM converge much faster on this example (here, in only a handful of iterations), it also converges to a better estimate of the parameters. Indeed, it essentially matches the loss obtained by the parameters that truly generated the data. We see that its parameter estimates are nearly the same as the true parameters."
+    "Not only does EM converge much faster on this example (here, in only a handful of iterations), it also converges to a better estimate of the parameters. Indeed, it essentially matches the loss obtained by the parameters that truly generated the data. We see that its parameter estimates are nearly the same as the true parameters, up to label switching. \n",
+    "\n",
+    "(Label switching refers to the fact that the generated parameters assume state 1 corresponds to the loaded die, whereas the learned parameters assume this is state 0; since these solutions have the same likelihood, and since the prior is also symmetrical, there are two equally good posterior modes, and EM will just find one of them. When you compare inferred  parameters or states between models, you may need to use our [find_permutation](https://probml.github.io/dynamax/api.html#dynamax.utils.utils.find_permutation) function to find the best correspondence between discrete latent labels.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initial probs:\n",
-      "[0.628 0.372]\n",
-      "transition matrix:\n",
-      "[[0.909 0.091]\n",
-      " [0.053 0.947]]\n",
-      "emission probs:\n",
-      "[[0.110 0.106 0.101 0.110 0.105 0.468]\n",
-      " [0.171 0.173 0.171 0.164 0.164 0.157]]\n"
+     "ename": "NameError",
+     "evalue": "name 'print_params' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kpmurphy/github/dynamax/docs/notebooks/hmm/casino_hmm_learning.ipynb Cell 27\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kpmurphy/github/dynamax/docs/notebooks/hmm/casino_hmm_learning.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m print_params(em_params)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'print_params' is not defined"
      ]
     }
    ],
@@ -613,7 +613,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -631,7 +631,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   },
   "widgets": {
