--- a/docs/notebooks/hmm/casino_hmm_inference.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_inference.ipynb
@@ -628,7 +628,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This notebook showed how to construct a simple categorical HMM, initialize its parameters, sample data, and use it to perform state inference (i.e. filtering, smoothing, and finding the most likely states). However, often we do not know the model paramters and instead need to estimate them from data. The next notebook shows how to do exactly that."
+    "This notebook showed how to construct a simple categorical HMM, initialize its parameters, sample data, and use it to perform state inference (i.e. filtering, smoothing, and finding the most likely states). However, often we do not know the model parameters and instead need to estimate them from data. The next notebook shows how to do exactly that."
    ]
   }
  ],
