--- a/docs/notebooks/hmm/gaussian_hmm.ipynb
+++ b/docs/notebooks/hmm/gaussian_hmm.ipynb
@@ -160,7 +160,9 @@
     "\n",
     "# Specify parameters of the HMM\n",
     "initial_probs = jnp.ones(true_num_states) / true_num_states\n",
-    "transition_matrix = 0.79 * jnp.eye(true_num_states) + 0.01 + 0.16 * jnp.roll(jnp.eye(true_num_states), 1, axis=1)\n",
+    "transition_matrix = 0.80 * jnp.eye(true_num_states) \\\n",
+    "    + 0.15 * jnp.roll(jnp.eye(true_num_states), 1, axis=1) \\\n",
+    "    + 0.05 / true_num_states\n",
     "emission_means = jnp.column_stack([\n",
     "    jnp.cos(jnp.linspace(0, 2 * jnp.pi, true_num_states + 1))[:-1],\n",
     "    jnp.sin(jnp.linspace(0, 2 * jnp.pi, true_num_states + 1))[:-1],\n",
