--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -11,7 +11,7 @@
     "This notebook continues the \"occasionally dishonest casino\" example from the preceding notebook.\n",
     "There, we assumed we knew the parameters of the model: the probability of switching between fair and loaded dice and the probabilities of the different outcomes (1,...,6) for each die. \n",
     "\n",
-    "Here, our goal is **learn these parameters from data**.  We will sample data from the model as before, but now we will estimate the parameters using eith stochastic gradient descent (SGD) or expectation-maximization (EM).\n",
+    "Here, our goal is **learn these parameters from data**.  We will sample data from the model as before, but now we will estimate the parameters using either stochastic gradient descent (SGD) or expectation-maximization (EM).\n",
     "\n",
     "The figure below shows the _graphical model_, complete with the parameter nodes.\n",
     "<p align=\"center\">\n",
