--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -31,7 +31,7 @@
     "\\end{align*}\n",
     "The hyperparameters can be specified in the [`CategoricalHMM`](https://probml.github.io/dynamax/api.html#dynamax.hidden_markov_model.CategoricalHMM) constructor..\n",
     "\n",
-    "The **learning objective** is to find parameters tham maximize the marginal probability,\n",
+    "The **learning objective** is to find parameters that maximize the marginal probability,\n",
     "\\begin{align*}\n",
     "\\theta^\\star &= \\text{arg max}_{\\theta} \\; p(\\theta \\mid y_{1:T}) \\\\\n",
     "&= \\text{arg max}_{\\theta} \\; p(\\theta, y_{1:T})\n",
